# wm

./: .gitignore  README.md  flake.nix  wm.cabal
app/: Core.hs  Layout.hs  Main.hs
