cabal-version: 3.0
name: wm
version: 0.1.0.0
build-type: Simple

common warnings
    ghc-options: -Wall -XInstanceSigs

executable wm
    import: warnings
    main-is: Main.hs
    other-modules: Core, Layout
    build-depends:
        base ^>=4.18.2.1,
        X11 ^>=1.10,
        typed-process ^>= 0.2.12.0,
    hs-source-dirs: app
    default-language: Haskell2010
